2001-09-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: try harder to avoid putting objects in the actor-container
	itself
	* contain.cc: allow putting a bag in a bag if dont_check is set
	* ucdisasm.cc: cosmetic fix with display of backward jumps
	* tools/Makefile.am: fixed make warning
	* Paperdoll_gump.cc: option for showing non-readied objects
	* exult_constants.h: made the CERR/COUT macro's 'if'-safe
	
2001-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/siintrinsics.cc: Reduce_health added (x87).
	* actors.cc: Use Avatar's real height.
	* usecode/ucinternal.cc (Usecode_internal): Fixed ARRC bug in
	cases where one or more values are empty arrays.

2001-09-28  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Give fake HP's to serpent statue in SI.
	* objs/egg.cc: Greater range of lift for 'something_on' eggs.

2001-09-28  Dancer Vesperman  <dancer@users.sourceforge.net>

	* keys.cc: get my own casts right :)...oh, and others, too
	* gamewin.cc: More cast conversion...many of which shouldn't be necessary. Hrm.
	* readnpcs.cc: More cast conversion.
	* schedule.cc: More cast conversion.

2001-09-27  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc (Usecode_function):  'Last_created' is now
	a stack; fixes Wall of Lights bug where Batlin's serpent jaw was
	missing.

	* actors.cc,flags.h:  Polymorph flagged moved to where Usecode
	checks for it (bit 32 of regular flags).

	* actors.cc (public): Enumerate shapes to call 'readied' Usecode
	on for SI.
	* actors.cc: Check for weapon frame being out of range.

	* drag.cc: Pass MOVE_WALK instead of MOVE_FLY.  Fixes bug where
	things get dropped into walls, and (hopefully!) doesn't break anything.

2001-09-26  Ryan Nunn <triforce@merlin.net.au>
	* actorio.cc, actors.h, cheat_screen.cc, gumps/Book_gump.*, 
	  gumps/Scroll_gump.* gumps/Sign_gump.*, gumps/Text_gump.*,
	  objs/flags.h, usecode/intrinsics.cc :